--- a/code/index.html
+++ b/code/index.html
@@ -18,6 +18,7 @@
 	<link href="css/theme.css" rel="stylesheet">	
 	<link href="css/responsive.css" rel="stylesheet">
 	<link href="css/colors/red.css" rel="stylesheet" class="colors">
+	<link href="css/bulles.css" rel="stylesheet">
 
 
 	<!-- Google Font -->
@@ -71,7 +72,7 @@
 							<li><a href="#about">A propos</a></li>
 							<li><a href="#team">L'équipe</a></li>
 							<li><a href="#news">Nouveautés</a></li>
-							<li><a href="#contacts">Contacte</a></li>								
+							<li><a href="#contacts">Contact</a></li>								
 						</ul>
 					</div>		
 				</div>
@@ -88,7 +89,7 @@
 			<div class="carousel-inner">
 				<div class="item active"> <!-- Change Image -->
 					<div class="caption">
-						<h1 class="animated fadeInLeftBig">Bienvenue au <strong>Bisto Des Gamers</strong></h1>
+						<h1 class="animated fadeInLeftBig">Bienvenue au <strong>Bistro Des Gamers</strong></h1>
 						<p class="animated fadeInRightBig">WebTV</p>
 						<a data-scroll class="learn-more animated fadeInUpBig" href="#about">C'est parti</a>
 					</div>
@@ -110,13 +111,26 @@
 			</div>
 			<a class="left-control" href="#home-slider" data-slide="prev"><i class="fa fa-angle-left"></i></a>
 			<a class="right-control" href="#home-slider" data-slide="next"><i class="fa fa-angle-right"></i></a>
-    </div>	
+    	</div>	
 	</div>	
 </section>
 <!-- End Slider -->
 
 </header>
-	
+
+<div id="background-wrap">
+	<div class="bubble x1"></div>
+    <div class="bubble x2"></div>
+    <div class="bubble x3"></div>
+    <div class="bubble x4"></div>
+    <div class="bubble x5"></div>
+    <div class="bubble x6"></div>
+    <div class="bubble x7"></div>
+    <div class="bubble x8"></div>
+    <div class="bubble x9"></div>
+    <div class="bubble x10"></div>
+</div>
+
 <!-- About BGD -->
 <section class="section-wrapper" id="about">
 	<div class="about-us">
@@ -142,7 +156,7 @@
 						<div class="col-lg-4 col-sm-4 wow fadeInDown" data-wow-duration="1s" data-wow-delay="450ms">
 							<i class="hovicon effect-1 sub-a"><b class="fa fa-heart-o"></b></i>
 							<h2>soutien</h2>
-							<p>Action, réaction et enticipation pour le bien commun</p>
+							<p>Action, réaction et anticipation pour le bien commun</p>
 						</div>
 						<div class="col-lg-4 col-sm-4 wow fadeInDown" data-wow-duration="1s" data-wow-delay="600ms">
 							<i class="hovicon effect-1 sub-a"><b class="fa fa-tablet"></b></i>
@@ -196,7 +210,7 @@
 							</div>
 							<div class="col-lg-3 col-md-3">
 								<div class="number wow fadeInRight" data-wow-duration="1s" data-wow-delay="750ms">
-									<p class="timer" data-from="0" data-to="9542" data-speed="2000">9542</p>		
+									<p class="timer" data-from="0" data-to="4909" data-speed="2000">4909</p>		
 								</div>
 								<div class="number-title wow fadeInDown" data-wow-duration="1s" data-wow-delay="750ms">
 									Heures en directes
@@ -675,12 +689,12 @@
 								<div class="col-xs-4 wow fadeInRight" data-wow-duration="1s" data-wow-delay="450ms">	
 									<i class="fa fa-mobile-phone"></i>
 									<div class="">Message positif</div>
-									<div class="">Joffrey Dornon</div>
+									<div class="">Président Joffrey</div>
 								</div>		
 								<div class="col-xs-4 wow fadeInRight" data-wow-duration="1s" data-wow-delay="600ms">	
 									<i class="fa fa-envelope-o"></i>
-									<div class="">Contacte professionnel</div>
-									<div class="">joffrey.d@lebdg.fr</div>
+									<div class="">Contact professionnel</div>
+									<div class="">contact@lebdg.fr</div>
 								</div>								
 							</div>																
 						</div>
